# webrtc-audio-processing

./: .gitignore  CLAUDE.md  Cargo.toml  NEWS  README.md  meson.build  meson_options.txt
crates/webrtc-aec3/: Cargo.toml
crates/webrtc-aec3/src/: adaptive_fir_filter.rs  adaptive_fir_filter_erl.rs  aec3_fft.rs  aec_state.rs  alignment_mixer.rs  api_call_jitter_metrics.rs  block.rs  block_buffer.rs  block_framer.rs  block_processor.rs  block_processor_metrics.rs  cascaded_biquad_filter.rs  circular_buffer.rs  clockdrift_detector.rs  coarse_filter_update_gain.rs  comfort_noise_generator.rs  common.rs  config.rs  decimator.rs  delay_estimate.rs  downsampled_render_buffer.rs  echo_audibility.rs  echo_path_delay_estimator.rs  echo_path_variability.rs  echo_remover.rs  echo_remover_metrics.rs  erl_estimator.rs  erle_estimator.rs  fft_buffer.rs  fft_data.rs  filter_analyzer.rs  frame_blocker.rs  fullband_erle_estimator.rs  lib.rs  matched_filter.rs  matched_filter_lag_aggregator.rs  moving_average.rs  multi_channel_content_detector.rs  nearend_detector.rs  refined_filter_update_gain.rs  (+21 more)
crates/webrtc-aecm/: Cargo.toml
crates/webrtc-aecm/src/: lib.rs
crates/webrtc-agc/: Cargo.toml
crates/webrtc-agc/src/: lib.rs
crates/webrtc-agc2/: Cargo.toml
crates/webrtc-agc2/src/: adaptive_digital_gain_controller.rs  biquad_filter.rs  clipping_predictor.rs  clipping_predictor_level_buffer.rs  common.rs  fixed_digital_level_estimator.rs  gain_applier.rs  interpolated_gain_curve.rs  lib.rs  limiter.rs  limiter_db_gain_curve.rs  noise_level_estimator.rs  rnn_vad.rs  saturation_protector.rs  saturation_protector_buffer.rs  speech_level_estimator.rs  speech_probability_buffer.rs  vad_wrapper.rs
crates/webrtc-apm/: Cargo.toml  RUST_BACKEND_TEST_RESULTS.md  build.rs  cbindgen.toml
crates/webrtc-apm-proptest/: Cargo.toml
crates/webrtc-apm-proptest/src/: comparison.rs  generators.rs  lib.rs
crates/webrtc-apm-sys/: Cargo.toml  build.rs
crates/webrtc-apm-sys/cpp/: shim.cc  shim.h
crates/webrtc-apm-sys/src/: bridge.rs  lib.rs
crates/webrtc-apm/include/: wap_audio_processing.h
crates/webrtc-apm/src/: audio_buffer.rs  audio_converter.rs  audio_processing.rs  audio_processing_impl.rs  audio_samples_scaler.rs  capture_levels_adjuster.rs  config.rs  config_selector.rs  echo_canceller3.rs  ffi.rs  gain_controller2.rs  high_pass_filter.rs  input_volume_controller.rs  lib.rs  residual_echo_detector.rs  rms_level.rs  splitting_filter.rs  stats.rs  stream_config.rs  submodule_states.rs  swap_queue.rs  three_band_filter_bank.rs
crates/webrtc-common-audio/: Cargo.toml
crates/webrtc-common-audio/src/: audio_util.rs  cascaded_biquad_filter.rs  channel_buffer.rs  lib.rs  push_resampler.rs  push_sinc_resampler.rs  sinc_resampler.rs
crates/webrtc-fft/: Cargo.toml
crates/webrtc-fft/src/: fft4g.rs  lib.rs  ooura_fft.rs  ooura_fft_neon.rs  ooura_fft_sse2.rs  pffft.rs
crates/webrtc-ns/: Cargo.toml
crates/webrtc-ns/src/: config.rs  fast_math.rs  histograms.rs  lib.rs  noise_estimator.rs  noise_suppressor.rs  ns_fft.rs  prior_signal_model.rs  prior_signal_model_estimator.rs  quantile_noise_estimator.rs  signal_model.rs  signal_model_estimator.rs  speech_probability_estimator.rs  suppression_params.rs  wiener_filter.rs
crates/webrtc-ring-buffer/: Cargo.toml
crates/webrtc-ring-buffer/src/: lib.rs
crates/webrtc-simd/: Cargo.toml
crates/webrtc-simd/src/: avx2.rs  fallback.rs  lib.rs  neon.rs  sse2.rs
crates/webrtc-vad/: Cargo.toml
crates/webrtc-vad/src/: lib.rs
tests/: meson.build  test_main.cc
tests/resources/: far22_stereo.pcm  far88_stereo.pcm  far96_stereo.pcm  near22_stereo.pcm  near88_stereo.pcm  near96_stereo.pcm
tests/resources/audio_processing/: output_data_float.pb  output_data_float_avx2.pb  output_data_mac_arm64.pb
tests/test_utils/: audio_buffer_tools.cc  audio_buffer_tools.h  audio_processing_builder_for_testing.cc  audio_processing_builder_for_testing.h  bitexactness_tools.cc  bitexactness_tools.h  create_test_field_trials.cc  create_test_field_trials.h  echo_canceller_test_tools.cc  echo_canceller_test_tools.h  echo_control_mock.h  fake_clock.cc  fake_clock.h  field_trial.cc  file_utils.cc  file_utils.h  input_audio_file.cc  input_audio_file.h  performance_timer.cc  performance_timer.h  protobuf_utils.cc  protobuf_utils.h  rnn_vad_test_utils.cc  rnn_vad_test_utils.h  rtc_expect_death.h  task_queue_for_test.h  test_utils.cc  test_utils.h  thread_stub.h
tests/test_utils/mock/: mock_block_processor.cc  mock_block_processor.h  mock_echo_remover.cc  mock_echo_remover.h  mock_render_delay_buffer.cc  mock_render_delay_buffer.h  mock_render_delay_controller.cc  mock_render_delay_controller.h
tests/tools/: gen_lp_residual_data.cc
tests/unit/: audio_buffer_unittest.cc  audio_frame_view_unittest.cc  audio_processing_impl_unittest.cc  audio_processing_unittest.cc  echo_canceller_test_tools_unittest.cc  echo_control_mobile_bit_exact_unittest.cc  echo_control_mobile_unittest.cc  gain_control_unittest.cc  gain_controller2_unittest.cc  high_pass_filter_unittest.cc  residual_echo_detector_unittest.cc  rms_level_unittest.cc  splitting_filter_unittest.cc
tests/unit/aec3/: adaptive_fir_filter_erl_unittest.cc  adaptive_fir_filter_unittest.cc  aec3_fft_unittest.cc  aec_state_unittest.cc  alignment_mixer_unittest.cc  api_call_jitter_metrics_unittest.cc  block_delay_buffer_unittest.cc  block_framer_unittest.cc  block_processor_metrics_unittest.cc  block_processor_unittest.cc  clockdrift_detector_unittest.cc  coarse_filter_update_gain_unittest.cc  comfort_noise_generator_unittest.cc  config_selector_unittest.cc  decimator_unittest.cc  echo_canceller3_unittest.cc  echo_path_delay_estimator_unittest.cc  echo_path_variability_unittest.cc  echo_remover_metrics_unittest.cc  echo_remover_unittest.cc  erl_estimator_unittest.cc  erle_estimator_unittest.cc  fft_data_unittest.cc  filter_analyzer_unittest.cc  frame_blocker_unittest.cc  matched_filter_lag_aggregator_unittest.cc  matched_filter_unittest.cc  moving_average_unittest.cc  multi_channel_content_detector_unittest.cc  (+13 more)
(+159 files in other folders)
