[workspace]
resolver = "3"
members = [
    "crates/webrtc-apm",
    "crates/webrtc-apm-sys",
    "crates/webrtc-common-audio",
    "crates/webrtc-aec3",
    "crates/webrtc-agc2",
    "crates/webrtc-ns",
    "crates/webrtc-simd",
    "crates/webrtc-ring-buffer",
    "crates/webrtc-fft",
    "crates/webrtc-apm-proptest",
]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "BSD-3-Clause"
repository = "https://gitlab.freedesktop.org/pulseaudio/webrtc-audio-processing"

[workspace.dependencies]
# Internal crates
webrtc-apm = { path = "crates/webrtc-apm" }
webrtc-apm-sys = { path = "crates/webrtc-apm-sys" }
webrtc-common-audio = { path = "crates/webrtc-common-audio" }
webrtc-aec3 = { path = "crates/webrtc-aec3" }
webrtc-agc2 = { path = "crates/webrtc-agc2" }
webrtc-ns = { path = "crates/webrtc-ns" }
webrtc-simd = { path = "crates/webrtc-simd" }
webrtc-ring-buffer = { path = "crates/webrtc-ring-buffer" }
webrtc-fft = { path = "crates/webrtc-fft" }
webrtc-apm-proptest = { path = "crates/webrtc-apm-proptest" }

# External dependencies
cpufeatures = "0.3"
derive_more = { version = "2", features = ["debug"] }
tracing = "0.1"
bytemuck = { version = "1", features = ["derive"] }
proptest = "1.9"
test-strategy = "0.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(docsrs)"] }
elided_lifetimes_in_paths = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
or_fun_call = "warn"
use_self = "warn"
unused_async = "warn"
absolute_paths = "warn"
manual_let_else = "warn"
allow_attributes_without_reason = "warn"
mod_module_files = "deny"
