option('gnustl', type: 'feature',
       value: 'auto',
       description: 'Use gnustl for a c++ library implementation (only used on Android)')
option('neon', type: 'feature',
       value: 'auto',
       description: 'Enable NEON optimisations')
option('inline-sse', type: 'boolean',
       value: true,
       description: 'Enable inline SSE/SSE2 optimisations (i.e. assume CPU supports SSE/SSE2)')
option('tests', type: 'feature',
       value: 'auto',
       description: 'Build unit tests')
option('rust-backend', type: 'boolean',
       value: false,
       description: 'Use Rust implementation of the audio processing pipeline (requires cargo)')
option('sonora-root', type: 'string',
       value: '',
       description: 'Path to the sonora workspace root (default: parent of this source tree)')
