[package]
name = "webrtc-agc"
version = "0.1.0"
description = "Automatic Gain Control (AGC1/AGC2) for WebRTC Audio Processing"
keywords = ["webrtc", "audio", "agc", "gain-control"]
categories = ["multimedia::audio"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
webrtc-common-audio = { workspace = true }
webrtc-simd = { workspace = true }
webrtc-vad = { workspace = true }
tracing = { workspace = true }
