[package]
name = "webrtc-apm-proptest"
version = "0.1.0"
description = "Property-based test framework for WebRTC Audio Processing Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# Enable FFI comparison tests against the C++ library.
cpp-comparison = ["dep:webrtc-apm-sys", "webrtc-apm-sys/cxx-bridge"]

[dependencies]
proptest = { workspace = true }
webrtc-apm-sys = { workspace = true, optional = true }
