[package]
name = "webrtc-apm-sys"
version = "0.1.0"
description = "C++ FFI bindings to WebRTC Audio Processing for comparison testing"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
# Enable cxx bridge to the C++ library. Requires the C++ library to be
# pre-built with Meson (meson setup builddir -Dtests=enabled && ninja -C builddir).
cxx-bridge = ["dep:cxx"]

[dependencies]
cxx = { version = "1.0", optional = true }

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"
