[package]
name = "webrtc-fft"
version = "0.1.0"
description = "FFT implementations for WebRTC Audio Processing (Ooura, PFFFT)"
keywords = ["fft", "audio", "dsp", "ooura"]
categories = ["algorithms", "multimedia::audio"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
