[package]
name = "webrtc-ns"
version = "0.1.0"
description = "Noise Suppression for WebRTC Audio Processing"
keywords = ["webrtc", "audio", "noise-suppression", "denoising"]
categories = ["multimedia::audio"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
webrtc-common-audio = { workspace = true }
tracing = { workspace = true, optional = true }
