[package]
name = "webrtc-ns"
version = "0.1.0"
description = "Noise Suppression for WebRTC Audio Processing"
keywords = ["webrtc", "audio", "noise-suppression", "denoising"]
categories = ["multimedia::audio"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
webrtc-fft = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
