[package]
name = "webrtc-simd"
version = "0.1.0"
description = "SIMD abstraction layer for WebRTC Audio Processing"
keywords = ["simd", "sse2", "avx2", "neon"]
categories = ["hardware-support"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Force a specific backend (for testing/benchmarking)
force-scalar = []
force-sse2 = []
force-avx2 = []
force-neon = []
