[package]
name = "webrtc-vad"
version = "0.1.0"
description = "Voice Activity Detection (VAD) for WebRTC Audio Processing"
keywords = ["webrtc", "audio", "vad", "voice-detection"]
categories = ["multimedia::audio"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
webrtc-common-audio = { workspace = true }
tracing = { workspace = true }
